# .github

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  compilation_report.md  copyright.txt  pyproject.toml  requirements.txt  taskfile.yml
.github/: dependabot.yml  renovate.json
.github/actions/release/: action.yaml
.github/hello-world/: README.md  pyproject.toml
.github/workflows/: book.yml  ci.yml  core.yml  coverage.yml  deptry.yml  latex.yml  linting.yml  makefile.yml  markdown  pre-commit.yml  release.yml  test_pdoc.yml  test_python.yml  test_tex.yml
actions/age/: action.yml
actions/book/: action.yml
actions/counting/: action.yml
actions/coverage/: action.yml
actions/dependencies/: action.yml
actions/deptry/: action.yml
actions/docker/: action.yml
actions/docstr/: action.yml
actions/environment/: action.yml
actions/environment/pip/: action.yml
actions/environment/uv/: action.yml
actions/jupyter/: action.yml
actions/latex/: action.yml
actions/marimo/: action.yml
actions/pdoc/: action.yml
actions/pre-commit/: action.yml
actions/publish/: action.yml
actions/release/: action.yaml  action.yml
actions/setup-environment/: action.yml
actions/setup-environment-uv/: action.yml
actions/sphinx/: action.yml
actions/tag/: action.yml
actions/test/: action.yml
actions/uv/core/: action.yml
age/: dependency-age-sorted.txt  dependency-age.txt
book/: _config.yml  genindex.html  objects.inv  search.html  searchindex.js
book/docs/: api.md  index.html
book/sphinx/: conf.py
contributing/: contributing.py  contributingTemplate.md  template.md
cvx/dog/: demo.py
pdoc/: cvx.html  search.js
pdoc/cvx/: hello.html
sphinx/: genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/_modules/: index.html
sphinx/autoapi/: index.html
src/cvx/: hello.py
tasks/: basic.yml  jupyter.yml  setup.yml  tests.yml
tests/: test_dog.py
tests/html-report/: report.html
tests/python/: test_trivial.py
tests/tex/: Fourier.tex  Hydra.tex
workflow-templates/: book.properties.json  book.yml  latex.properties.json  latex.yml  pre-commit.properties.json  pre-commit.yml  release.properties.json  test.properties.json  test.yml  tschm-ci.properties.json  tschm-ci.yml
(+17 files in other folders)
